update functional es6

--- a/source/_posts/【函数式编程入门经典系列】第5章-数组的函数式编程.md
+++ b/source/_posts/【函数式编程入门经典系列】第5章-数组的函数式编程.md
@@ -24,3 +24,64 @@ tags:
 4. **归约数组**：
 
     设置累加器并遍历数组以生成一个单一元素的过程。
+
+5. map()
+
+        const map = (array,fn) => {
+            let results = []
+            for(const value of array)
+                results.push(fn(value))
+            
+            return results
+        }
+
+6. filter()
+
+        const filter = (array,fn) => {
+            let results = []
+            for(const value of array)
+                (fn(value)) ? results.push(value) : undefined
+            
+            return results
+        }
+
+7. concatAll()
+
+        const concatAll = (array,fn) => {
+            let results = []
+            for(const value of array)
+                results.push.apply(results,value)
+            
+            return results
+        }   
+
+8. reduce()
+
+        const reduce = (array,fn,initialValue) => {
+            let accumlator;
+
+            if(initialValue != undefined)
+                accumlator = initialValue;
+            else 
+                accumlator = array[0];
+            
+            if(initialValue === undefined)
+                for(let i=1;i<array.length;i++)
+                    accumlator = fn(accumlator,array[i])
+            else
+                for(const value of array)
+                    accumlator = fn(accumlator,value)
+
+            return [accumlator]
+        }
+
+9. zip()
+
+        const zip = (leftArr,rightArr,fn) => {
+            let index,results = [];
+
+            for(index =0;index < Math.min(leftArr.length,rightArr.length);index++)
+                results.push(fn(leftArr[index],rightArr[index]))
+            
+            return results;
+        }
