--- a/source/_posts/【函数式编程入门经典系列】第5章-数组的函数式编程.md
+++ b/source/_posts/【函数式编程入门经典系列】第5章-数组的函数式编程.md
@@ -25,7 +25,7 @@ tags:
 
     设置累加器并遍历数组以生成一个单一元素的过程。
 
-5. map()
+5. **map()**
 
         const map = (array,fn) => {
             let results = []
@@ -35,7 +35,7 @@ tags:
             return results
         }
 
-6. filter()
+6. **filter()**
 
         const filter = (array,fn) => {
             let results = []
@@ -45,7 +45,7 @@ tags:
             return results
         }
 
-7. concatAll()
+7. **concatAll()**
 
         const concatAll = (array,fn) => {
             let results = []
@@ -55,7 +55,7 @@ tags:
             return results
         }   
 
-8. reduce()
+8. **reduce()**
 
         const reduce = (array,fn,initialValue) => {
             let accumlator;
@@ -75,7 +75,7 @@ tags:
             return [accumlator]
         }
 
-9. zip()
+9. **zip()**
 
         const zip = (leftArr,rightArr,fn) => {
             let index,results = [];
