--- a/source/_posts/图形验证码.md
+++ b/source/_posts/图形验证码.md
@@ -9,9 +9,49 @@ toc: true
 
 最近项目比较紧，都没时间写博客了╮(╯▽╰)╭
 项目中需要使用验证码的功能，所以记录下图形验证码的使用方法。
-
+<!--more-->
 ### 调研
-    
+1. 相对于输入数字的验证码，滑动图片的方式则比较新颖，趣味性强，操作简单。故采用滑动图片的验证码。
+
+2. 验证码插件有java的，也有js的。作为前端coder，还是选择js的插件了。
+
+
 ### verify.js的使用方法
+1. 在html中引入verify.css和verify.js
+
+2. 在html中设置一个验证码的占位符：
+        <div id="mpanel" ></div>
+
+3. 在js中，
+        //滑动验证
+        $('#mpanel').slideVerify({
+            type : 2,		//类型
+            vOffset : 5,	//误差量，根据需求自行调整
+            vSpace : 5,	//间隔
+            imgName : ['1.jpg', '2.jpg', '3.jpg'],
+            imgSize : {
+                width: '355px',
+                height: '200px',
+            },
+            blockSize : {
+                width: '40px',
+                height: '40px',
+            },
+            barSize : {
+                width : '355px',
+                height : '40px',
+            },
+            ready : function() {
+            },
+            success : function() {
+                alert('验证成功');
+            },
+            error : function() {
+                alert('验证失败');
+            }
+        });
 
 ### 题外话
+1. 参考资料：
+    [jquery验证码插件verify.js](http://www.htmleaf.com/jQuery/Form/201711064813.html)
+    [vue中 identify(生成图片验证码)插件](https://blog.csdn.net/zhangkeke_/article/details/82900747?utm_source=blogxgwz2)
