--- a/source/_posts/汇总.md
+++ b/source/_posts/汇总.md
@@ -34,7 +34,7 @@ toc: true
 ### 拼装车，不上路，上路吊销驾驶证，200到2000
 驾驶拼装的机动车或者已达到报废标准的机动车上道路行驶的，公安机关交通管理部门应当予以收缴，强制报废。对驾驶前款所列机动车上道路行驶的驾驶人，处二百元以上二千元以下罚款，并吊销机动车驾驶证。
 
-### 
+### 箭头是坡，两个箭头是连续
 一个箭头向上是上陡坡，一个箭头向下是下陡坡。两个箭头向上是连续上坡，两个箭头向下是连续下坡。下坡速度较快，需注意速度，谨慎驾驶。
 
 ### 双数是里程表，单数是发动机转数
@@ -46,9 +46,6 @@ toc: true
 发动机制动：行车（挂上排档，不是空档）中，油门一收，便产生发动机制动！
 原理：主要靠（停止供油）发动机的压缩力而制止车辆的前进。
 行车制动：通过刹车踏板，把人体的力量，由总泵至分泵加上助力器的作用，迫使刹车片与刹车盘或刹车毂磨擦至车辆停止前进。
-
-### 
-交通肇事致一人受伤（属于一般事故），负事故全部或者主要责任，并具有酒后、无证驾驶、严重超载等情形之一的，以交通肇事罪处罚。
 
 ### 隧道不开远光灯
 隧道是不允许开远光灯的，此标志是用以警告车辆驾驶人进入隧道打开前照明灯，注意行驶。
@@ -62,7 +59,7 @@ toc: true
 ### 一离二制三加
 左边是离合踏板，中间是制动踏板，右边是加速踏板
 
-### 使用起栅栏表示有人看守，只有火车标志表示无人看守
+### 使用栅栏表示有人看守，只有火车标志表示无人看守；一条50米，两条100米，三条150米
 
 ### 实线不跨虚线越，障碍物前多让路
 双黄线严禁跨越或者压线行驶。
@@ -85,4 +82,63 @@ toc: true
 
 ### 风扇：冷风暖气风扇
 
+### 饮酒驾车会被扣留驾驶证
+初次饮酒后驾车，暂扣6个月驾驶证，并处1000-2000元罚款；
+再次饮酒后驾车，处10日以下拘留，并处1000-2000元罚款，吊销驾驶证。
+
+### 交警可扣留的是车辆，不能拘留人
+
+### 18周四以上，70周岁以下可申请小型汽车驾驶证；70周岁以上，1年1次身体条件证明
+
+### 3年延期3个月换证30天换信息
+有效期满，90天内换；信息变化，30天内换
+因服兵役、出国等原因，无法审验，延期审验最长不超过3年，延期期间不能驾驶。
+因发生交通事故但未被吊销驾驶证的，应在积分周期结束后30天内接受审验。
+
+### 有效期换证是接受审验，累计12分满是接受再教育
+
+### 大中货客车年年审检
+
+### 实习期12个月，上高速不可单独，需要3年以上老手陪同；满12分注销驾照
+
+### 假一吊二撤三醉五逃终身
+
+### 12分：证驾不符、酒驾、超载20%、肇事逃逸、遮挡污损车牌、伪造车牌、高速逆行掉头穿越、营运车辆高速停车、超速20%或50%、连续驾驶4小时休息20分钟不到、无证
+ 
+### 6分：信号灯、应急车道、不避让校车、暂扣期间开车、欺骗办驾证
+
+### 车登记、人核发
+随车的（车牌、行驶证等）去登记地 
+随人的（驾驶证）去核发地 
+机动车驾驶人户籍迁出原车辆管理所管辖区的，应向**迁入地**车辆管理所申请换证。
+机动车驾驶人在核发地车辆管理所管辖区以外居住的，可以向**居住地**车辆管理所申请换证。
+
+### 30  15
+
+### 两车道，左100；三车道，左110 中90  右60
+
+### 交通肇事致一人受伤，酒后、无证驾驶、严重超载、逃逸之一的，以交通肇事罪处罚
+
+### 交叉路口不能停车，不能倒车，不能超车
+
+### 铁路道口、交叉路口、单行路、桥梁、急弯、陡坡、隧道中不能倒车 
+
+### 铁路道口、交叉路口、急弯路、宽度不足4米的窄路、桥梁、陡坡、隧道以及距离上述地点50米以内的路段，不能停车
+
+### 发生交通事故后当事人逃逸的，故意破伪造现场、毁灭证据的，均承担全部责任
+
+### 黄色网格线是禁停，白色菱形是减速，黄色实线禁止跨越，黄色虚线允许超车或掉头
+
+### 醉酒驾驶是指车辆驾驶人员血液中的酒精含量大于或者等于80mg/100ml的驾驶行为
+
+### 环岛驶入开左转向灯，驶出开右转向灯
+
+### 机动车遇前方交叉路口交通阻塞时，应当依次停在路口以外等候，不得进入路口
+
+### 补领了驾驶证，仍使用原证件的，可处20到200之间的罚款
+
+### 高速能见度：261，145
+200米，速度60，距离100；100米，速度40，距离50，尽快驶出
+
 ### 
+
