--- a/source/_posts/汇总.md
+++ b/source/_posts/汇总.md
@@ -70,7 +70,7 @@ toc: true
 
 ### 气囊红色表示危险，黄色表示故障
 
-### 
+### 没死人拘役，死了没逃3年以下，死了逃了3到7年，逃了致死7年以上
 《中华人民共和国刑法》第一百三十三条：
 违反交通运输管理法规，因而发生重大事故，致人重伤、死亡或者使公私财产遭受重大损失的，处三年以下有期徒刑或者拘役；
 交通运输肇事后逃逸或者有其他特别恶劣情节的，处三年以上七年以下有期徒刑；
@@ -105,7 +105,15 @@ toc: true
 
 ### 12分：证驾不符、酒驾、超载20%、肇事逃逸、遮挡污损车牌、伪造车牌、高速逆行掉头穿越、营运车辆高速停车、超速20%或50%、连续驾驶4小时休息20分钟不到、无证
  
-### 6分：信号灯、应急车道、不避让校车、暂扣期间开车、欺骗办驾证
+### 6分：信号灯、应急车道、不避让校车、暂扣期间开车、欺骗办驾证、低能见度时高速路不按规定行驶
+
+### 3分：
+道路发生故障，不按规定使用灯光和设置警告标志的；
+
+
+### 2分：
+
+### 1分：
 
 ### 车登记、人核发
 随车的（车牌、行驶证等）去登记地 
@@ -123,7 +131,9 @@ toc: true
 
 ### 铁路道口、交叉路口、单行路、桥梁、急弯、陡坡、隧道中不能倒车 
 
-### 铁路道口、交叉路口、急弯路、宽度不足4米的窄路、桥梁、陡坡、隧道以及距离上述地点50米以内的路段，不能停车
+### 口五站三
+口五：机动车在距离铁路道口、交叉路口、急弯路、宽度不足4米的窄路、桥梁、陡坡、隧道以，50米以内不准停车；
+站三：机动车在距离急救站、加油站、消防站，30米以内不准停车。
 
 ### 发生交通事故后当事人逃逸的，故意破伪造现场、毁灭证据的，均承担全部责任
 
@@ -139,6 +149,84 @@ toc: true
 
 ### 高速能见度：261，145
 200米，速度60，距离100；100米，速度40，距离50，尽快驶出
+不按规定行驶，将被扣6分
 
 ### 
+机动车驾驶人驾驶证有效期满换领驾驶证时，须提交县级以上医疗机构出具的身体条件证明。
+
+### 
+车辆发生鼓掌无法移动时，需要在车后50～100米放置警告标志。
+
+### 
+违反交通管制的规定强行通行，不听劝阻的，由公安机关交通管理部门处200～2000罚款，可处15日以下拘留。
+
+### 
+驾驶机动车在路口直行遇红灯，不得越过停止线；
+如果整辆车全部越过停止线可以继续通过，否则要停下来。
+圆圈的红灯，右转弯的车辆在不妨碍被放行的车辆、行人通行的情况下，可以通行。
+
+### 
+路口黄灯持续闪烁，警示驾驶人要注意瞭望，确认安全通过。
+
+### 黄警红禁蓝指示
+黄牌警告
+红牌禁止
+蓝牌指示
+
+### 两弯反向，三弯连续
+黄牌标志内见到两个弯，是反向弯路警告标志；
+三个弯是连续弯路警告标志。
+
+### 两头宽中间窄是桥面变窄，一头宽一头窄是两侧变窄，
+
+### 
+分向行驶预告：虚线隔开，没有距离和文字提示
+分道信息预告：没有线，单个图形，有距离和文字
+交叉路口预告：实现隔开，有距离和文字
+
+### G国S省X县Y乡
+国道标志：红底白字G开头
+省道标志：黄底黑字S开头
+县道标志：X开头
+乡道标志：白底黑字Y开头
+
+### p字上边没有遮挡是露天停车场，有遮挡是室内停车场
+
+### 红底白色图形，/\ 表示两侧通行，\表示右侧通，/表示左侧通 
+
+### 高速公路 有红色斜杠是终点预告，没有是起点预告，出口会有“出口”文字
+
+### 高速公路特殊天气建议速度，黄高白低黑建议
+黄色数字是限制最高速度
+白色数字是限制最低速度
+黑色数字是建议速度
+
+### 高速公路 有救援二字就是救援电话，否则是紧急电话
+
+### 高速公路  只有一个p是停车场预告，一个p加杯子是停车区预告
+
+### 交叉路口内一条虚线，无论黄色白色，都是路口导向线
+
+### 锯齿状白色实线是可变导向车道线，否则白色实线是导向车道线
+
+### 
+两边虚线中间实线港湾式停车道
+全虚线是应急车道
+无线是错车道
+
+### 双黄线、单黄线、单实线均为 禁止标线
+
+### 路缘石上黄色虚线表示禁止长时停车，实线禁止停车
+
+### 中心圈
+设置在交叉路口中心的白色圆形或菱形区域，车辆左转弯时不得压线，只能紧靠中心圈小转弯
+
+### 手在胸前是变道，手在腰间是转弯，手轻轻往下压是减速慢行
+
+### 所有禁止左转的路由都禁止掉头
+
+### 
+### 
+### 
+
 
