--- a/source/_posts/汇总.md
+++ b/source/_posts/汇总.md
@@ -6,227 +6,340 @@ toc: true
 ---
 此篇文章用于记录驾考宝典的总结。
 <!--more-->
-### 有线城5公7，没线城3公4
-《道路交通安全法实施条例》第四十五条：
-机动车在道路上行驶不得超过限速标志、标线标明的速度。在没有限速标志、标线的道路上，机动车不得超过下列最高行驶速度：
-(一)没有道路中心线的道路，城市道路为每小时30公里，公路为每小时40公里;
-(二)同方向只有1条机动车道的道路，城市道路为每小时50公里，公路为每小时70公里。
+### 高速路相关
+#### 高速能见度：261，145
+200米，速度60，距离100；
+100米，速度40，距离50，尽快驶出
+不按规定行驶，将被扣6分
 
-### 转弯让直行，右方车先行，右转让左转 
-三个先行原则：
-转弯的机动车让直行的车辆先行；
-右方道路来车先行；
-右转弯车让左转弯车先行。
+#### 高速公路 有红色斜杠是终点预告，没有是起点预告，出口会有“出口”文字
 
-### P是制动，!是故障
-圆圈里面是“P” 表示驻车制动器处于制动状态，即手刹没松开，但是车辆没有发生故障。
-里面是“！” 表示制动系统异常或故障。
+#### 高速公路特殊天气建议速度，黄高白低黑建议
+黄色数字是限制最高速度
+白色数字是限制最低速度
+黑色数字是建议速度
 
-### 往哪变道就开那个转向灯
-变更车道时提前开启转向灯提醒后车，然后观察有无变更车道的条件，再保持安全距离，驶入要变更的车道。
- 
-### 
-在设有禁停标志、标线的路段，在机动车道与非机动车道、人行道之间设有隔离设施的路段以及人行横道、施工地段，不得停车。
+#### 高速公路 有救援二字就是救援电话，否则是紧急电话
 
-### 
-右侧变窄：右侧变窄，警告车辆驾驶人注意前方右侧车行道或路面狭窄情况，遇有来车应减速避让。
+#### 高速公路  只有一个p是停车场预告，一个p加杯子是停车区预告
 
-### 拼装车，不上路，上路吊销驾驶证，200到2000
-驾驶拼装的机动车或者已达到报废标准的机动车上道路行驶的，公安机关交通管理部门应当予以收缴，强制报废。对驾驶前款所列机动车上道路行驶的驾驶人，处二百元以上二千元以下罚款，并吊销机动车驾驶证。
+#### 高速入口 -- 匝道 -- 加速车道 
 
-### 箭头是坡，两个箭头是连续
-一个箭头向上是上陡坡，一个箭头向下是下陡坡。两个箭头向上是连续上坡，两个箭头向下是连续下坡。下坡速度较快，需注意速度，谨慎驾驶。
+#### 高速公路的右侧路肩是供车辆出现紧急状况时停车的，不可以在此行车
 
-### 双数是里程表，单数是发动机转数
-仪表中有KM，这是速度和里程表
-转速表数字只有个位,速度里程表有十位数跟百位数
-
-### 冰雪路面很滑，不能紧急制动，应降低车速，充分利用发动机制动
-冰雪路面很滑，不能紧急制动，应降低车速，充分利用发动机制动。
-发动机制动：行车（挂上排档，不是空档）中，油门一收，便产生发动机制动！
-原理：主要靠（停止供油）发动机的压缩力而制止车辆的前进。
-行车制动：通过刹车踏板，把人体的力量，由总泵至分泵加上助力器的作用，迫使刹车片与刹车盘或刹车毂磨擦至车辆停止前进。
-
-### 隧道不开远光灯
-隧道是不允许开远光灯的，此标志是用以警告车辆驾驶人进入隧道打开前照明灯，注意行驶。
-凡是车辆进入双向行驶隧道,一般都应该开启近光灯,而不要开启远光灯。
-若是隧道本身没有灯光的,可以变换灯光行驶,但是会车前要转为近光灯。
-
-### 前盖为发动机舱，后边为行李舱
-
-### 遇见鹿，是野生，遇见牛，是牲畜
-
-### 一离二制三加
-左边是离合踏板，中间是制动踏板，右边是加速踏板
-
-### 使用栅栏表示有人看守，只有火车标志表示无人看守；一条50米，两条100米，三条150米
-
-### 实线不跨虚线越，障碍物前多让路
-双黄线严禁跨越或者压线行驶。
-
-### 时速超过100，距离100；时速小于100，距离50以上
+#### 时速超过100，距离100；时速小于100，距离50以上
 《实施条例》第八十条：
 机动车在高速公路上行驶，车速超过每小时100公里时，应当与同车道前车保持100米以上的距离，车速低于每小时100公里时，与同车道前车距离可以适当缩短，但最小距离不得少于50米。
 
-### 气囊红色表示危险，黄色表示故障
+#### 车故障，50～100设置标志，高速路是150米外
+车辆发生故障无法移动时，需要在车后50～100米放置警告标志。
 
-### 没死人拘役，死了没逃3年以下，死了逃了3到7年，逃了致死7年以上
-《中华人民共和国刑法》第一百三十三条：
-违反交通运输管理法规，因而发生重大事故，致人重伤、死亡或者使公私财产遭受重大损失的，处三年以下有期徒刑或者拘役；
-交通运输肇事后逃逸或者有其他特别恶劣情节的，处三年以上七年以下有期徒刑；
-因逃逸致人死亡的，处七年以上有期徒刑。
+*****
 
-### 红色的茶壶机油压力过低
+### 图标相关
+#### P是制动，!是故障
+圆圈里面是“P” 表示驻车制动器处于制动状态，即手刹没松开，但是车辆没有发生故障。
+里面是“！” 表示制动系统异常或故障。
 
-### 八边形停车让行，三角形减速让行
+#### 箭头是坡，两个箭头是连续
+一个箭头向上是上陡坡，一个箭头向下是下陡坡。
+两个箭头向上是连续上坡，两个箭头向下是连续下坡。
+下坡速度较快，需注意速度，谨慎驾驶。
 
-### 风扇：冷风暖气风扇
+#### 前盖为发动机舱，后边为行李舱
 
-### 饮酒驾车会被扣留驾驶证
-初次饮酒后驾车，暂扣6个月驾驶证，并处1000-2000元罚款；
-再次饮酒后驾车，处10日以下拘留，并处1000-2000元罚款，吊销驾驶证。
+#### 遇见鹿，是野生，遇见牛，是牲畜
 
-### 交警可扣留的是车辆，不能拘留人
+#### 一离二制三加
+左边是离合踏板，中间是制动踏板，右边是加速踏板
 
-### 18周四以上，70周岁以下可申请小型汽车驾驶证；70周岁以上，1年1次身体条件证明
+#### 使用栅栏表示有人看守，只有火车标志表示无人看守；每条线50米
+一条50米，两条100米，三条150米
 
-### 3年延期3个月换证30天换信息
-有效期满，90天内换；信息变化，30天内换
-因服兵役、出国等原因，无法审验，延期审验最长不超过3年，延期期间不能驾驶。
-因发生交通事故但未被吊销驾驶证的，应在积分周期结束后30天内接受审验。
+#### 实线不跨虚线越，障碍物前多让路
+双黄线严禁跨越或者压线行驶。
 
-### 有效期换证是接受审验，累计12分满是接受再教育
+#### 八边形停车让行，三角形减速让行
 
-### 大中货客车年年审检
+#### 风扇：冷风暖气风扇
 
-### 实习期12个月，上高速不可单独，需要3年以上老手陪同；满12分注销驾照
+#### 黄色网格线是禁停，白色菱形是减速，黄色实线禁止跨越，黄色虚线允许超车或掉头
 
-### 假一吊二撤三醉五逃终身
-
-### 12分：证驾不符、酒驾、超载20%、肇事逃逸、遮挡污损车牌、伪造车牌、高速逆行掉头穿越、营运车辆高速停车、超速20%或50%、连续驾驶4小时休息20分钟不到、无证
- 
-### 6分：信号灯、应急车道、不避让校车、暂扣期间开车、欺骗办驾证、低能见度时高速路不按规定行驶
-
-### 3分：
-道路发生故障，不按规定使用灯光和设置警告标志的；
-
-
-### 2分：
-
-### 1分：
-
-### 车登记、人核发
-随车的（车牌、行驶证等）去登记地 
-随人的（驾驶证）去核发地 
-机动车驾驶人户籍迁出原车辆管理所管辖区的，应向**迁入地**车辆管理所申请换证。
-机动车驾驶人在核发地车辆管理所管辖区以外居住的，可以向**居住地**车辆管理所申请换证。
-
-### 30  15
-
-### 两车道，左100；三车道，左110 中90  右60
-
-### 交通肇事致一人受伤，酒后、无证驾驶、严重超载、逃逸之一的，以交通肇事罪处罚
-
-### 交叉路口不能停车，不能倒车，不能超车
-
-### 铁路道口、交叉路口、单行路、桥梁、急弯、陡坡、隧道中不能倒车 
-
-### 口五站三
-口五：机动车在距离铁路道口、交叉路口、急弯路、宽度不足4米的窄路、桥梁、陡坡、隧道以，50米以内不准停车；
-站三：机动车在距离急救站、加油站、消防站，30米以内不准停车。
-
-### 发生交通事故后当事人逃逸的，故意破伪造现场、毁灭证据的，均承担全部责任
-
-### 黄色网格线是禁停，白色菱形是减速，黄色实线禁止跨越，黄色虚线允许超车或掉头
-
-### 醉酒驾驶是指车辆驾驶人员血液中的酒精含量大于或者等于80mg/100ml的驾驶行为
-
-### 环岛驶入开左转向灯，驶出开右转向灯
-
-### 机动车遇前方交叉路口交通阻塞时，应当依次停在路口以外等候，不得进入路口
-
-### 补领了驾驶证，仍使用原证件的，可处20到200之间的罚款
-
-### 高速能见度：261，145
-200米，速度60，距离100；100米，速度40，距离50，尽快驶出
-不按规定行驶，将被扣6分
-
-### 
-机动车驾驶人驾驶证有效期满换领驾驶证时，须提交县级以上医疗机构出具的身体条件证明。
-
-### 
-车辆发生鼓掌无法移动时，需要在车后50～100米放置警告标志。
-
-### 
-违反交通管制的规定强行通行，不听劝阻的，由公安机关交通管理部门处200～2000罚款，可处15日以下拘留。
-
-### 
-驾驶机动车在路口直行遇红灯，不得越过停止线；
-如果整辆车全部越过停止线可以继续通过，否则要停下来。
-圆圈的红灯，右转弯的车辆在不妨碍被放行的车辆、行人通行的情况下，可以通行。
-
-### 
-路口黄灯持续闪烁，警示驾驶人要注意瞭望，确认安全通过。
-
-### 黄警红禁蓝指示
-黄牌警告
-红牌禁止
-蓝牌指示
-
-### 两弯反向，三弯连续
+#### 两弯反向，三弯连续
 黄牌标志内见到两个弯，是反向弯路警告标志；
 三个弯是连续弯路警告标志。
 
-### 两头宽中间窄是桥面变窄，一头宽一头窄是两侧变窄，
+#### 两头宽中间窄是桥面变窄，一头宽一头窄是两侧变窄，
 
-### 
+#### 预告
 分向行驶预告：虚线隔开，没有距离和文字提示
 分道信息预告：没有线，单个图形，有距离和文字
 交叉路口预告：实现隔开，有距离和文字
 
-### G国S省X县Y乡
+#### G国S省X县Y乡
 国道标志：红底白字G开头
 省道标志：黄底黑字S开头
 县道标志：X开头
 乡道标志：白底黑字Y开头
 
-### p字上边没有遮挡是露天停车场，有遮挡是室内停车场
+#### p字上边没有遮挡是露天停车场，有遮挡是室内停车场
 
-### 红底白色图形，/\ 表示两侧通行，\表示右侧通，/表示左侧通 
+#### 红底白色图形，/\ 表示两侧通行，\表示右侧通，/表示左侧通 
 
-### 高速公路 有红色斜杠是终点预告，没有是起点预告，出口会有“出口”文字
+#### EF -- 燃油表，CH -- 水温表，km -- 历程与速度表
+empty   full  cool hot
 
-### 高速公路特殊天气建议速度，黄高白低黑建议
-黄色数字是限制最高速度
-白色数字是限制最低速度
-黑色数字是建议速度
+#### 前雾灯绿色光朝左，后雾灯黄色光朝右
 
-### 高速公路 有救援二字就是救援电话，否则是紧急电话
+#### 有斜杠是雾灯，无斜杠是远近光灯，直的是远光，斜的是近光
 
-### 高速公路  只有一个p是停车场预告，一个p加杯子是停车区预告
+#### 位置灯是车辆示宽灯，对称的绿色标志
 
-### 交叉路口内一条虚线，无论黄色白色，都是路口导向线
+#### ABS 防抱死，黄色的ABS图标表示防抱死制动系统出现故障，应停车检查；红色表示启动
 
-### 锯齿状白色实线是可变导向车道线，否则白色实线是导向车道线
+#### 茶壶是机油，加油站是汽油
 
-### 
+#### 红色的茶壶机油压力过低
+
+#### 加油站的标志，黄色表示油过低，红色表示供油故障
+
+#### 温度计标志，黄色表示故障，红色表示发动机温度过高，冷却液不足
+
+#### 气囊红色表示危险，黄色表示故障
+
+#### 内外两个红三角，危险报警闪光灯（双蹦）
+
+#### 太阳表示总开关
+
+#### 扇子形状的是前风扇，长方形的是后风扇；上面有一条线的是刮水，上面加半圆虚线的是洗涤
+
+#### 点火开关
+LOCK: 切断电源，锁定方向盘
+ACC：接通附件电源
+ON：接通除起动机外的全车全部电源
+START：接通起动机电源，发动起动机
+
+#### 转向灯：上右下左
+
+#### 黄警红禁蓝指示
+黄牌警告
+红牌禁止
+蓝牌指示
+
+#### 交叉路口内一条虚线，无论黄色白色，都是路口导向线
+
+#### 锯齿状白色实线是可变导向车道线，否则白色实线是导向车道线
+
+#### 车道
 两边虚线中间实线港湾式停车道
 全虚线是应急车道
 无线是错车道
 
-### 双黄线、单黄线、单实线均为 禁止标线
+#### 双黄线、单黄线、单实线均为 禁止标线
 
-### 路缘石上黄色虚线表示禁止长时停车，实线禁止停车
+#### 路缘石上黄色虚线表示禁止长时停车，实线禁止停车
 
-### 中心圈
+#### 中心圈
 设置在交叉路口中心的白色圆形或菱形区域，车辆左转弯时不得压线，只能紧靠中心圈小转弯
 
-### 手在胸前是变道，手在腰间是转弯，手轻轻往下压是减速慢行
+#### 手在胸前是变道，手在腰间是转弯，手轻轻往下压是减速慢行
 
-### 所有禁止左转的路由都禁止掉头
+*****
 
-### 
-### 
-### 
+### 记分相关
+#### 12分：
+证驾不符、
+酒驾、
+超载20%、
+肇事逃逸、
+遮挡污损车牌、
+伪造车牌、
+高速逆行掉头穿越、
+营运车辆高速停车、
+超速20%或50%、
+连续驾驶4小时休息20分钟不到、
+无证
+ 
+#### 6分：
+信号灯、
+应急车道、
+不避让校车、
+暂扣期间开车、
+欺骗办驾证、
+低能见度时高速路不按规定行驶
 
+#### 3分：
+道路发生故障，不按规定使用灯光和设置警告标志的；
+
+#### 2分：
+
+#### 1分：
+
+*****
+
+### 时速相关
+#### 有线城5公7，没线城3公4
+《道路交通安全法实施条例》第四十五条：
+机动车在道路上行驶不得超过限速标志、标线标明的速度。在没有限速标志、标线的道路上，机动车不得超过下列最高行驶速度：
+(一)没有道路中心线的道路，城市道路为每小时30公里，公路为每小时40公里;
+(二)同方向只有1条机动车道的道路，城市道路为每小时50公里，公路为每小时70公里。
+
+#### 最高30，拖拉机、电瓶车等15
+1、进出非机动车道，通过铁路道口、急转弯、窄路、窄桥时
+2、掉头、转弯，下陡坡时
+3、遇雾、雨、雪、沙尘、冰雹，能见度在50米以内时
+4、在冰雪、泥泞的道路上行驶时
+5、牵引发生故障的机动车时
+
+#### 两车道，左100；三车道，左110 中90  右60
+
+*****
+
+### 驾驶证相关
+#### 假一吊二撤三醉五逃终身
+
+#### 18周四以上，70周岁以下可申请小型汽车驾驶证；70周岁以上，1年1次身体条件证明
+
+#### 3年延期3个月换证30天换信息
+有效期满，90天内换；信息变化，30天内换
+因服兵役、出国等原因，无法审验，延期审验最长不超过3年，延期期间不能驾驶。
+因发生交通事故但未被吊销驾驶证的，应在积分周期结束后30天内接受审验。
+
+#### 有效期换证是接受审验，累计12分满是接受再教育
+
+#### 有效期满换驾驶证，需提交身体条件证明
+机动车驾驶人驾驶证有效期满换领驾驶证时，须提交县级以上医疗机构出具的身体条件证明。
+
+#### 大中货客车年年审检
+
+#### 实习期12个月，上高速不可单独，需要3年以上老手陪同
+
+#### 扣分满12分注销驾照
+
+#### 车登记、人核发
+随车的（车牌、行驶证等）去登记地 
+随人的（驾驶证）去核发地 
+机动车驾驶人户籍迁出原车辆管理所管辖区的，应向**迁入地**车辆管理所申请换证。
+机动车驾驶人在核发地车辆管理所管辖区以外居住的，可以向**居住地**车辆管理所申请换证。
+
+#### 饮酒驾车会被扣留驾驶证
+初次饮酒后驾车，暂扣6个月驾驶证，并处1000-2000元罚款；
+再次饮酒后驾车，处10日以下拘留，并处1000-2000元罚款，吊销驾驶证。
+
+#### 交警可扣留的是车辆，不能拘留人
+
+#### 补领了驾驶证，仍使用原证件的，可处20到200之间的罚款
+
+#### 醉酒驾驶是指车辆驾驶人员血液中的酒精含量大于或者等于80mg/100ml的驾驶行为
+
+*****
+
+### 处罚相关
+#### 拼装车，不上路，上路吊销驾驶证，200到2000
+驾驶拼装的机动车或者已达到报废标准的机动车上道路行驶的，公安机关交通管理部门应当予以收缴，强制报废。对驾驶前款所列机动车上道路行驶的驾驶人，处二百元以上二千元以下罚款，并吊销机动车驾驶证。
+
+#### 发生交通事故后当事人逃逸的，故意破伪造现场、毁灭证据的，均承担全部责任
+
+#### 没死人拘役，死了没逃3年以下，死了逃了3到7年，逃了致死7年以上
+《中华人民共和国刑法》第一百三十三条：
+违反交通运输管理法规，因而发生重大事故，致人重伤、死亡或者使公私财产遭受重大损失的，处三年以下有期徒刑或者拘役；
+交通运输肇事后逃逸或者有其他特别恶劣情节的，处三年以上七年以下有期徒刑；
+因逃逸致人死亡的，处七年以上有期徒刑。
+
+#### 交通肇事致一人受伤，酒后、无证驾驶、严重超载、逃逸之一的，以交通肇事罪处罚
+
+#### 强制通行，罚款200～2000，拘留15日以下
+违反交通管制的规定强行通行，不听劝阻的，由公安机关交通管理部门处200～2000罚款，可处15日以下拘留。
+
+#### 将机动车交由未取得机动车驾驶证的人驾驶的，由交管处200～2000罚款，并处以吊销驾驶证的处罚
+
+*****
+
+### 转弯、停车等相关
+#### 转弯让直行，右方车先行，右转让左转 
+三个先行原则：
+转弯的机动车让直行的车辆先行；
+右方道路来车先行；
+右转弯车让左转弯车先行。
+
+#### 往哪变道就开那个转向灯
+变更车道时提前开启转向灯提醒后车，然后观察有无变更车道的条件，再保持安全距离，驶入要变更的车道。
+ 
+#### 环岛驶入开左转向灯，驶出开右转向灯
+
+#### 左转转大弯，右转转小弯
+
+#### 所有禁止左转的路口都禁止掉头
+
+#### 口五站三
+口五：机动车在距离铁路道口、交叉路口、急弯路、宽度不足4米的窄路、桥梁、陡坡、隧道以，50米以内不准停车；
+站三：机动车在距离急救站、加油站、消防站，30米以内不准停车。
+
+#### 不能停车的地方
+在设有禁停标志、标线的路段，在机动车道与非机动车道、人行道之间设有隔离设施的路段以及人行横道、施工地段，不得停车。
+
+#### 交叉路口不能停车，不能倒车，不能超车
+
+#### 铁路道口、交叉路口、单行路、桥梁、急弯、陡坡、隧道中不能倒车 
+
+#### 机动车遇前方交叉路口交通阻塞时，应当依次停在路口以外等候，不得进入路口
+
+#### 减速、鸣喇叭、靠右行
+
+#### 上坡先行，如果下坡到中间了，下坡先行
+
+#### 
+右侧变窄：右侧变窄，警告车辆驾驶人注意前方右侧车行道或路面狭窄情况，遇有来车应减速避让。
+
+***** 
+
+### 红绿灯
+#### 前方交叉路口拥堵，要依次停在路口外等候，即使是绿灯，也不能驶入
+
+#### 红灯停
+驾驶机动车在路口直行遇红灯，不得越过停止线；
+如果整辆车全部越过停止线可以继续通过，否则要停下来。
+圆圈的红灯，右转弯的车辆在不妨碍被放行的车辆、行人通行的情况下，可以通行。
+
+#### 黄灯等一等
+路口黄灯持续闪烁，警示驾驶人要注意瞭望，确认安全通过。
+
+*****
+
+### 制动相关
+#### 冰雪路面很滑，不能紧急制动，应降低车速，充分利用发动机制动
+冰雪路面很滑，不能紧急制动，应降低车速，充分利用发动机制动。
+发动机制动：行车（挂上排档，不是空档）中，油门一收，便产生发动机制动！
+原理：主要靠（停止供油）发动机的压缩力而制止车辆的前进。
+行车制动：通过刹车踏板，把人体的力量，由总泵至分泵加上助力器的作用，迫使刹车片与刹车盘或刹车毂磨擦至车辆停止前进。
+
+#### 上陡坡换抵挡，踏加速踏板
+
+#### 驾驶车辆驶入铁路道口前减速降挡，进入道口后不能变换挡位，换挡容易熄火
+
+#### 车辆涉水后，应保持低速行驶，间断轻踏，以恢复制动效果
+
+#### 紧急制动容易翻车，连续制动容易造成温度过热
+
+#### 雨天路滑，车辆制动距离增大，行车中尽量使用发动机制动减速
+
+#### 湿滑路面制动过程中，发现车辆偏移方向：先握紧方向盘，不要紧急踩刹车
+
+#### 驾车行驶在颠簸路段是，挂抵挡挡位缓抬加速踏板
+
+*****
+
+### 其他
+#### 隧道不开远光灯
+隧道是不允许开远光灯的，此标志是用以警告车辆驾驶人进入隧道打开前照明灯，注意行驶。
+凡是车辆进入双向行驶隧道,一般都应该开启近光灯,而不要开启远光灯。
+若是隧道本身没有灯光的,可以变换灯光行驶,但是会车前要转为近光灯。
+
+#### 轮胎气压过低，会导致爆胎
+
+#### 安全头枕在发生追尾事故时，能有效保护驾驶人的颈部
+
+#### 安装防抱死系统的车辆保证车辆在急刹车时，不会发生失控现象。但不是所有路况下都会缩短制动距离，如冰雪，潮湿路面
+
+#### 安全气囊是辅助，安全带是保护
 
