--- a/source/_posts/汇总.md
+++ b/source/_posts/汇总.md
@@ -8,8 +8,9 @@ toc: true
 <!--more-->
 ### 高速路相关
 #### 高速能见度：261，145
-200米，速度60，距离100；
-100米，速度40，距离50，尽快驶出
+200米，速度60km/h，距离100米；
+100米，速度40km/h，距离50米；
+50米，速度20km/h，尽快驶离；
 不按规定行驶，将被扣6分
 
 #### 高速公路 有红色斜杠是终点预告，没有是起点预告，出口会有“出口”文字
@@ -21,9 +22,10 @@ toc: true
 
 #### 高速公路 有救援二字就是救援电话，否则是紧急电话
 
-#### 高速公路  只有一个p是停车场预告，一个p加杯子是停车区预告
+#### 高速公路  只有一个p是停车场预告，一个p加个咖啡杯的是停车区预告
 
 #### 高速入口 -- 匝道 -- 加速车道 
+机动车从匝道驶入高速公路，应当开启左转向灯
 
 #### 高速公路的右侧路肩是供车辆出现紧急状况时停车的，不可以在此行车
 
@@ -57,24 +59,18 @@ toc: true
 一条50米，两条100米，三条150米
 
 #### 实线不跨虚线越，障碍物前多让路
-双黄线严禁跨越或者压线行驶。
-
-#### 八边形停车让行，三角形减速让行
+双黄线严禁跨越或者压线行驶
+黄色实线禁止跨越
+黄色虚线允许超车或掉头
 
 #### 风扇：冷风暖气风扇
 
-#### 黄色网格线是禁停，白色菱形是减速，黄色实线禁止跨越，黄色虚线允许超车或掉头
-
 #### 两弯反向，三弯连续
-黄牌标志内见到两个弯，是反向弯路警告标志；
+黄牌标志内见到两个弯（歪着的N），是反向弯路警告标志；
 三个弯是连续弯路警告标志。
 
-#### 两头宽中间窄是桥面变窄，一头宽一头窄是两侧变窄，
-
-#### 预告
-分向行驶预告：虚线隔开，没有距离和文字提示
-分道信息预告：没有线，单个图形，有距离和文字
-交叉路口预告：实现隔开，有距离和文字
+#### 两头宽中间窄是桥面变窄，一头宽一头窄是两侧变窄
+右侧变窄：右侧变窄，警告车辆驾驶人注意前方右侧车行道或路面狭窄情况，遇有来车应减速避让。
 
 #### G国S省X县Y乡
 国道标志：红底白字G开头
@@ -86,26 +82,15 @@ toc: true
 
 #### 红底白色图形，/\ 表示两侧通行，\表示右侧通，/表示左侧通 
 
-#### EF -- 燃油表，CH -- 水温表，km -- 历程与速度表
+#### EF -- 燃油表，CH -- 水温表，km -- 里程与速度表
 empty   full  cool hot
 
-#### 前雾灯绿色光朝左，后雾灯黄色光朝右
+#### 雾灯前绿后黄
+前雾灯绿色光朝左，后雾灯黄色光朝右
 
 #### 有斜杠是雾灯，无斜杠是远近光灯，直的是远光，斜的是近光
 
 #### 位置灯是车辆示宽灯，对称的绿色标志
-
-#### ABS 防抱死，黄色的ABS图标表示防抱死制动系统出现故障，应停车检查；红色表示启动
-
-#### 茶壶是机油，加油站是汽油
-
-#### 红色的茶壶机油压力过低
-
-#### 加油站的标志，黄色表示油过低，红色表示供油故障
-
-#### 温度计标志，黄色表示故障，红色表示发动机温度过高，冷却液不足
-
-#### 气囊红色表示危险，黄色表示故障
 
 #### 内外两个红三角，危险报警闪光灯（双蹦）
 
@@ -113,13 +98,28 @@ empty   full  cool hot
 
 #### 扇子形状的是前风扇，长方形的是后风扇；上面有一条线的是刮水，上面加半圆虚线的是洗涤
 
+#### 转向灯：上右下左
+
+#### 茶壶是机油，加油站是汽油
+
+#### 黄色 红色
+1、加油站的标志，黄色表示油过低，红色表示供油故障
+
+2、温度计标志，黄色表示故障，红色表示发动机温度过高，冷却液不足
+
+3、气囊，黄色表示故障，红色表示危险
+
+4、ABS 防抱死，黄色的ABS图标表示防抱死制动系统出现故障，应停车检查；红色表示启动
+
+5、茶壶，红色表示机油压力过低，机油量不足
+
+6、电池，红色表示充电电路故障
+
 #### 点火开关
 LOCK: 切断电源，锁定方向盘
 ACC：接通附件电源
 ON：接通除起动机外的全车全部电源
 START：接通起动机电源，发动起动机
-
-#### 转向灯：上右下左
 
 #### 黄警红禁蓝指示
 黄牌警告
@@ -135,12 +135,58 @@ START：接通起动机电源，发动起动机
 全虚线是应急车道
 无线是错车道
 
+#### 白色举行标线框：平行式停车位
+
 #### 双黄线、单黄线、单实线均为 禁止标线
 
 #### 路缘石上黄色虚线表示禁止长时停车，实线禁止停车
 
+#### 黄色网格线是禁停，白色菱形是减速
+
 #### 中心圈
 设置在交叉路口中心的白色圆形或菱形区域，车辆左转弯时不得压线，只能紧靠中心圈小转弯
+
+#### 路面由白色虚线和三角地带标线组成的是 道路出口标线
+
+#### 蓝色圆形，一个大人拉着一个小孩： 步行
+
+#### 黄底黑色边框三角形里
+1、有个感叹号：注意危险 
+
+2、有个自行车：注意非机动车
+
+3、有个正面的小汽车在水里：过水路面
+
+4、有个侧面的小汽车在船上：渡口
+
+5、有个小汽车一半在路上，一个在水面：堤坝路
+
+6、有半边山的路：傍山险路
+
+7、有半边山在掉石头：注意落石
+
+8、一根棍上飘着一个旗帜：注意横风
+
+9、一个小车歪着，后面有两道折线：易滑路段
+
+10、一个人拿着铁锹在铲东西：注意施工
+
+11、两个车撞在一起，还有个感叹号：事故易发
+
+12、有个小汽车，旁边有两条虚线，后面带两个/\ ：注意保持车距
+
+13、人行横道上有个人：注意行人
+
+14、两个箭头反向平行，中间竖着一条线连接：注意分离式道路
+
+#### 红色边框三角形里有个“让”：减速让行
+
+#### 八边形停车让行，三角形减速让行
+
+#### 预告
+分向行驶预告：虚线隔开，没有距离和文字提示
+分道信息预告：没有线，单个图形，有距离和文字
+交叉路口预告：实线隔开，有距离和文字
 
 #### 手在胸前是变道，手在腰间是转弯，手轻轻往下压是减速慢行
 
@@ -200,6 +246,10 @@ START：接通起动机电源，发动起动机
 
 #### 18周四以上，70周岁以下可申请小型汽车驾驶证；70周岁以上，1年1次身体条件证明
 
+#### 年满20周岁，可以初次申请准驾大型货车、城市公交车、无轨电车或者有轨电车
+
+#### 准驾类型为小型汽车的，可以驾驶：低速载货汽车
+
 #### 3年延期3个月换证30天换信息
 有效期满，90天内换；信息变化，30天内换
 因服兵役、出国等原因，无法审验，延期审验最长不超过3年，延期期间不能驾驶。
@@ -232,11 +282,17 @@ START：接通起动机电源，发动起动机
 
 #### 醉酒驾驶是指车辆驾驶人员血液中的酒精含量大于或者等于80mg/100ml的驾驶行为
 
+#### 初次申领驾驶证有效期是6年，每个计分周期均为达到12分的，换发10年的
+
 *****
 
 ### 处罚相关
-#### 拼装车，不上路，上路吊销驾驶证，200到2000
-驾驶拼装的机动车或者已达到报废标准的机动车上道路行驶的，公安机关交通管理部门应当予以收缴，强制报废。对驾驶前款所列机动车上道路行驶的驾驶人，处二百元以上二千元以下罚款，并吊销机动车驾驶证。
+#### 吊销驾驶证，罚款200到2000（拼装车、超过规定时速50%、将机动车交由未取得机动车驾驶证的人驾驶的）
+1、驾驶拼装的机动车或者已达到报废标准的机动车上道路行驶的，公安机关交通管理部门应当予以收缴，强制报废。对驾驶前款所列机动车上道路行驶的驾驶人，处二百元以上二千元以下罚款，并吊销机动车驾驶证。
+
+2、超过规定时速50%
+
+3、将机动车交由未取得机动车驾驶证的人驾驶的，由交管处200～2000罚款，并处以吊销驾驶证的处罚
 
 #### 发生交通事故后当事人逃逸的，故意破伪造现场、毁灭证据的，均承担全部责任
 
@@ -251,7 +307,10 @@ START：接通起动机电源，发动起动机
 #### 强制通行，罚款200～2000，拘留15日以下
 违反交通管制的规定强行通行，不听劝阻的，由公安机关交通管理部门处200～2000罚款，可处15日以下拘留。
 
-#### 将机动车交由未取得机动车驾驶证的人驾驶的，由交管处200～2000罚款，并处以吊销驾驶证的处罚
+#### "危险驾驶罪"：醉驾、机动车追逐竞驶
+1、机动车追逐竞驶，情节恶劣的，处拘役，并处罚金
+
+2、醉驾，吊销驾驶证，五年内不得再次申请
 
 *****
 
@@ -288,8 +347,7 @@ START：接通起动机电源，发动起动机
 
 #### 上坡先行，如果下坡到中间了，下坡先行
 
-#### 
-右侧变窄：右侧变窄，警告车辆驾驶人注意前方右侧车行道或路面狭窄情况，遇有来车应减速避让。
+#### 在狭窄的山路，不靠山体的一方先行
 
 ***** 
 
@@ -323,9 +381,11 @@ START：接通起动机电源，发动起动机
 
 #### 雨天路滑，车辆制动距离增大，行车中尽量使用发动机制动减速
 
-#### 湿滑路面制动过程中，发现车辆偏移方向：先握紧方向盘，不要紧急踩刹车
+#### 湿滑路面制动过程中，发现车辆偏移方向：先握紧方向盘，不要紧急踩刹车（不要踩制动踏板）
 
-#### 驾车行驶在颠簸路段是，挂抵挡挡位缓抬加速踏板
+#### 下长坡连续使用行车制动会使制动器温度升高而使制动效果急剧下降
+
+#### 驾车行驶在颠簸路段时，挂抵挡挡位缓抬加速踏板
 
 *****
 
