--- a/source/_posts/汇总.md
+++ b/source/_posts/汇总.md
@@ -115,6 +115,8 @@ empty   full  cool hot
 
 6、电池，红色表示充电电路故障
 
+7、绑着安全带的人，红色表示没有系好安全带
+
 #### 点火开关
 LOCK: 切断电源，锁定方向盘
 ACC：接通附件电源
@@ -179,16 +181,29 @@ START：接通起动机电源，发动起动机
 
 14、两个箭头反向平行，中间竖着一条线连接：注意分离式道路
 
+15、一个加号：警告车辆驾驶人谨慎慢行，注意横向来车
+
 #### 红色边框三角形里有个“让”：减速让行
+告示车辆驾驶人应慢行或停车，确保干道车辆优先
 
 #### 八边形停车让行，三角形减速让行
 
-#### 预告
+#### 预告:交叉（实线）、分向（虚线）、分道（无线）
+交叉路口预告：实线隔开，有距离和文字
 分向行驶预告：虚线隔开，没有距离和文字提示
 分道信息预告：没有线，单个图形，有距离和文字
-交叉路口预告：实线隔开，有距离和文字
 
-#### 手在胸前是变道，手在腰间是转弯，手轻轻往下压是减速慢行
+#### 蓝底白色箭头
+方型图标蓝色箭头：单行路（直行）；
+圆形图标蓝色箭头：直行； 
+方型图标蓝色箭头两边带虚线：直行车道；
+粗箭头加一横线：优先通行，干路先行； 
+
+#### 交警手势
+手在胸前：变道，
+手在腰间：转弯，
+手从肩部到腰部轻轻往下压：减速慢行
+左手从腰部往下压：左转弯待转信号
 
 *****
 
@@ -248,7 +263,7 @@ START：接通起动机电源，发动起动机
 
 #### 年满20周岁，可以初次申请准驾大型货车、城市公交车、无轨电车或者有轨电车
 
-#### 准驾类型为小型汽车的，可以驾驶：低速载货汽车
+#### 准驾类型为小型汽车的，可以驾驶：低速载货汽车；准驾类型为小型自动挡汽车的，可以驾驶：轻型自动挡载货汽车
 
 #### 3年延期3个月换证30天换信息
 有效期满，90天内换；信息变化，30天内换
@@ -304,13 +319,17 @@ START：接通起动机电源，发动起动机
 
 #### 交通肇事致一人受伤，酒后、无证驾驶、严重超载、逃逸之一的，以交通肇事罪处罚
 
-#### 强制通行，罚款200～2000，拘留15日以下
-违反交通管制的规定强行通行，不听劝阻的，由公安机关交通管理部门处200～2000罚款，可处15日以下拘留。
+#### 罚款200～2000，拘留15日以下:强制通行、交通事故后逃逸但尚不构成犯罪的
+1、违反交通管制的规定强行通行，不听劝阻的，由公安机关交通管理部门处200～2000罚款，可处15日以下拘留。
+
+2、驾驶机动车造成交通事故后逃逸，尚不构成犯罪的，罚款200～2000，可处15日以下拘留。
 
 #### "危险驾驶罪"：醉驾、机动车追逐竞驶
 1、机动车追逐竞驶，情节恶劣的，处拘役，并处罚金
 
 2、醉驾，吊销驾驶证，五年内不得再次申请
+
+#### 机动车发生财产损失交通事故，对应当自行撤离现场而未撤离造成交通阻塞的，可对驾驶人处以200元罚款
 
 *****
 
@@ -325,6 +344,8 @@ START：接通起动机电源，发动起动机
 变更车道时提前开启转向灯提醒后车，然后观察有无变更车道的条件，再保持安全距离，驶入要变更的车道。
  
 #### 环岛驶入开左转向灯，驶出开右转向灯
+
+#### 在道路上靠边停车的过程中，提取开启右转向灯
 
 #### 左转转大弯，右转转小弯
 
