--- a/source/_posts/汇总.md
+++ b/source/_posts/汇总.md
@@ -31,7 +31,8 @@ toc: true
 
 #### 时速超过100，距离100；时速小于100，距离50以上
 《实施条例》第八十条：
-机动车在高速公路上行驶，车速超过每小时100公里时，应当与同车道前车保持100米以上的距离，车速低于每小时100公里时，与同车道前车距离可以适当缩短，但最小距离不得少于50米。
+机动车在高速公路上行驶，车速超过每小时100公里时，应当与同车道前车保持100米以上的距离，
+车速低于每小时100公里时，与同车道前车距离可以适当缩短，但最小距离不得少于50米。
 
 #### 车故障，50～100设置标志，高速路是150米外
 车辆发生故障无法移动时，需要在车后50～100米放置警告标志。
@@ -137,13 +138,13 @@ START：接通起动机电源，发动起动机
 全虚线是应急车道
 无线是错车道
 
-#### 白色举行标线框：平行式停车位
+#### 白色矩形标线框：平行式停车位
 
 #### 双黄线、单黄线、单实线均为 禁止标线
 
 #### 路缘石上黄色虚线表示禁止长时停车，实线禁止停车
 
-#### 黄色网格线是禁停，白色菱形是减速
+#### 黄色网格线是禁停，白色菱形是减速（人行横道预告）
 
 #### 中心圈
 设置在交叉路口中心的白色圆形或菱形区域，车辆左转弯时不得压线，只能紧靠中心圈小转弯
@@ -291,8 +292,6 @@ START：接通起动机电源，发动起动机
 初次饮酒后驾车，暂扣6个月驾驶证，并处1000-2000元罚款；
 再次饮酒后驾车，处10日以下拘留，并处1000-2000元罚款，吊销驾驶证。
 
-#### 交警可扣留的是车辆，不能拘留人
-
 #### 补领了驾驶证，仍使用原证件的，可处20到200之间的罚款
 
 #### 醉酒驾驶是指车辆驾驶人员血液中的酒精含量大于或者等于80mg/100ml的驾驶行为
@@ -352,7 +351,7 @@ START：接通起动机电源，发动起动机
 #### 所有禁止左转的路口都禁止掉头
 
 #### 口五站三
-口五：机动车在距离铁路道口、交叉路口、急弯路、宽度不足4米的窄路、桥梁、陡坡、隧道以，50米以内不准停车；
+口五：机动车在距离铁路道口、交叉路口、急弯路、宽度不足4米的窄路、桥梁、陡坡、隧道，50米以内不准停车；
 站三：机动车在距离急救站、加油站、消防站，30米以内不准停车。
 
 #### 不能停车的地方
