--- a/source/_posts/【计算机基础】06软件工程.md
+++ b/source/_posts/【计算机基础】06软件工程.md
@@ -26,4 +26,74 @@ NS图、PAD图描述的程序一定是结构化的。
 7. 发现错误多的程序模块，残留在模块中的错误也多。
 
 ### 项目管理
-1. 
+1. **PMI理念**：
+（1）项目经理是整合者，是在做整合管理。
+
+（2）项目经理必须被授权。
+
+（3）项目经理要积极主动，鼓励干系人的参与。
+比如发起人要求变更，项目经理不能直接接受或直接拒绝，要评估分析后再决定。
+
+（4）拒绝镀金，拒绝多此一举。
+镀金：是项目人员为了讨好客户而画蛇添足做的项目活动。
+
+（5）项目团队必须得到尊重、重视、并且要及时沟通，反对免费加班。
+
+（6）做项目时有两个因素必须考虑：组织过程资产、事业环境因素。
+
+（7）采取任何措施前，都要有政策的依据，有计划的指导，按照要求、规范、标准、流程、策略来进行，做事要有章可循。
+
+
+2. 在月项目状态会上，客户抱怨缺乏与项目进展有关的信息。项目经理应该参考**沟通管理计划**。
+沟通管理计划是管理梨花中唯一一个有干货的，里面有需要传递的对象，以及谁来传递等等。
+
+3. 项目三大特性：临时性、独特性、渐进明细。
+
+4. 通用的项目生命周期结构：
+（1）启动项目（概念阶段）
+（2）组织与准备（开发/规划阶段）
+（3）执行项目工作（实施阶段）
+（4）结束项目（收尾阶段）
+
+5. **生命周期**：
+（1）预测型
+完全计划型，一个阶段一个阶段的按部就班执行，适用于对项目结果了解很充分的项目。
+先做需求分析，再做概要涉及、详细涉及，然后编码、测试、最后发布，按照计划去做，基本没有变更。
+
+（2）迭代型
+通过一系列重复的循环活动、来不断优化产品功能。
+比如磨刀，每一轮迭代都要把刀磨的更加锋利。
+
+（3）增量型
+在预定的时间内渐进地增加产品的功能。
+
+（4）适应型
+也叫变更驱动、敏捷方法。迭代型和增量型的混合。
+最终目标和交付的成果也难以事先确定，管理过程也经常有变化，需要应对快速变化的环境。
+
+（5）混合型
+瀑布和敏捷的混合，充分了解或有确定需求的项目要素遵循预测型开发生命周期，而仍在发展中的要素遵循适应型开发生命周期。
+比如硬件部分用预测型，软件部分用适应型。
+
+6. 项目经理的角色
+（1）项目经理是由执行组织委派，领导团队实现项目目标的个人。
+
+（2）项目经理从三个方面进行管理：项目的管理、干系人的管理、团队的管理。
+
+7. 创建WBS：把项目可交付成果和项目工作分解成较小的，更易于管理的组成部分。
+100%原则：通过把WBS底层的所有工作逐层向上汇总，确保既没有遗漏的工作，也没有多余的工作。这就是WBS的核心特点。
+
+8. **制定进度计划的关键步骤**：
+（1）关键路径法，找出关键活动
+（2）关键链法，克服帕金森定律
+（3）资源优化，解决资源不足的问题
+（4）进度压缩，缩短工期
+（5）假设情景分析，识别风险
+（6）模特卡洛模拟，计算整体项目进度区间
+
+9. 敏捷方法还特别用到了 **迭代燃尽图**。
+
+10. 规划质量管理有两个目的，一是识别质量要求，二是描述如何证明符合要求。
+前者对应的重要文件是质量测量指标，后者对应的文件是质量管理计划。
+
+11. 管理质量主要针对的是**过程管控**，把过程管好才能建立质量信心。
